syntax = "proto2";

package dtpb;

message PackProperty {
    // effective rows(multiple versions of one row is count as one include delete)
    required int64 num_rows = 1;
}

message PackProperties {
    repeated PackProperty property = 1;
}
